2004-11-30 Shane Landrum <epicene@pobox.com>

	* en/Gtk/ColorSelection.xml: Documented deprecated UpdatePolicy prop.
	* en/Gtk/ColorButton.xml: Added docs.
	* en/Gtk/TreeModel.xml
	* en/Gtk/TreeModelFilter.xml
	* en/Gtk/TreeModelFilterModifyFunc.xml
	* en/Gtk/TreeModelFilterVisibleFunc.xml
	* en/Gtk/TreeModelSort.xml: Added and elaborated docs
	for filtering tree models, in compliance with GTK 2.4.
	
2004-11-26  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* doc/en/Gtk/ActionEntry.xml:
	* doc/en/Gtk/ActionGroup.xml:
	* doc/en/Gtk/RadioActionEntry.xml:
	* doc/en/Gtk/ToggleActionEntry.xml:
	* doc/en/Gtk/UIManager.xml:
	
	New ActionEntry related structs & methods.

2004-11-18  Dan Winship  <danw@novell.com>

	* en/Gtk/: update for container child property change

2004-11-16  Dan Winship  <danw@novell.com>

	* en/GLib/Value.xml: document new constructors

2004-11-15  Dan Winship  <danw@novell.com>

	* en/Gtk/Container.xml (FocusChild): Has a getter now too.
	(Added): Clarify that this only means "Gtk.Container.Add was
	called", and doesn't get fired when you call Gtk.Box.PackStart,
	etc

2004-11-15 Mike Kestner <mkestner@ximian.com>

	* en/Gtk/ColorSelection.xml : remove newly hidden deprecated methods.
	* en/*/*.xml : add some stubs for new DestroyNotify methods.

2004-11-09  John Luke  <john.luke@gmail.com>

	* en/Gtk/Action.xml:
	* en/Gtk/ActionGroup.xml:
	* en/Gtk/UIManagerItemType.xml:
	* en/Gtk/UIManager.xml: doc

2004-11-09  Dan Winship  <danw@novell.com>

	* en/GLib/Object.xml: 
	* en/Gtk/Widget.xml: update for CreateNativeObject changes

2004-11-08  Dan Winship  <danw@novell.com>

	* en/Gtk/Box.xml:
	* en/Gtk/ButtonBox.xml:
	* en/Gtk/Container.xml:
	* en/Gtk/Fixed.xml:
	* en/Gtk/Layout.xml:
	* en/Gtk/Menu.xml:
	* en/Gtk/Notebook.xml:
	* en/Gtk/Paned.xml:
	* en/Gtk/Table.xml:
	* en/Gtk/Toolbar.xml: document container child properties

2004-11-05 Mike Kestner <mkestner@ximian.com>

	* Makefile.am : copy assemblies into updater so they don't